--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-  <h1>Hello</h1>
-
+  <center><h1>Welcome!</h1></center>
+  <center><p>Hello welcome to the ProgrammingPlace</p></center>
+  <center><h3>Rules:</h3></center>
 
 
 
