--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html>
   <center><h1>Welcome!</h1></center>
   <center><p>Hello welcome to the ProgrammingPlace</p></center>
-  <center><h3>Rules:</h3></center>
-
+  <h3>Full list of rules:</h3>
+  <p>1. No obbsesive swearing
+    2. No hate speach, or talks of violence. 
+    3. NO RACISM| any loophole to this will result in a ban.
+  </p>
 
 
 
