--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
+
 <!DOCTYPE html>
-
 <html>
-  <center><h1>Welcome!</h1></center>
-  <center><p>Hello welcome to the ProgrammingPlace</p></center>
-  <h3>Full list of rules:</h3>
-  <p>1. No obbsesive swearing
-    2. No hate speach, or talks of violence. 
-    3. NO RACISM| any loophole to this will result in a ban.
-  </p>
+<head>
+	<title>Welcome</title>
+</head>
+<body>
+	<script>alert("welcome to the official website for the programmingplace")</script>
+	<center>Hello!</center>
+	<h3>Here are the server rules.</h3>
+	<br>
+	<p>* Don't be obbsesive with swearing. </p>
+	<p>* NO racism| ANY LOOPHOLE TO THIS WILL RESULT IN A BAN. </p>
+	<p>* No executables| Breaking this rule will result in a 5 hour mute.</p>
+	<p>* No hate speech/Talk of crimes or violence| 8 hour mute, possible kick </p>
+	<p>* We allow files without encryption</p>
+	<p>* Any open source project has to be on Github.</p>
+	<p>* No disrespct to any moderators or admins| will result in a mute, the time depends on how the mod feels</p>
+	<p>EXTREME RULE:: NO TALKING ABOUT SELF HARM</p>
+	<p>Continue: NO TALK OF DEATH</p>
+	<p>The following rules are not for members.</p>
+	<br>
+	<h4>Moderator Rules.</h4>
+	<p>* No muting for more than 8 hours without reason.</p>
+	<p>* No kicking without someone breaking the rules.</p>
+	<p>* No making roles without permission from an admin</p>
+	<p>* No bypassing the rules.</p>
+	<p>* Pinning messages is Ok, just don't be obbsesive</p>
+	<p>* It doesn't matter how much you moderate just don't ignore the huge stuff.</p>
 
 
 
+</body>
 </html>
