--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<script>alert("welcome to the official website for the programmingplace")</script>
-	<center>Hello!</center>
+	<script>alert("Be sure to read the rules.") </script>
+	<center>Welcome the offical site!</center>
 	<h3>Here are the server rules.</h3>
 	<br>
 	<p>* Don't be obbsesive with swearing. </p>
@@ -17,7 +18,7 @@
 	<p>* Any open source project has to be on Github.</p>
 	<p>* No disrespct to any moderators or admins| will result in a mute, the time depends on how the mod feels</p>
 	<p>EXTREME RULE:: NO TALKING ABOUT SELF HARM</p>
-	<p>Continue: NO TALK OF DEATH</p>
+	<p></p>
 	<p>The following rules are not for members.</p>
 	<br>
 	<h4>Moderator Rules.</h4>
