--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome</title>
-</head>
-<body>
+	<title>ProgrammingPlace</title>	
 	<script>alert("welcome to the official website for the programmingplace")</script>
 	<script>alert("Be sure to read the rules.") </script>
+</head>
+<body>
+
 	<center>Welcome the offical site!</center>
+	<h4>Scroll to the bottom for the updates!</h4>
 	<h3>Here are the server rules.</h3>
 	<br>
 	<p>* Don't be obbsesive with swearing. </p>
