--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
 	<center>Welcome the offical site!</center>
-	<h4>Scroll to the bottom for the updates!</h4>
+	<center><h3>Updates are at the veryy botton</h3></center>
+	<h4>Update 2.</h4>
 	<h3>Here are the server rules.</h3>
 	<br>
 	<p>* Don't be obbsesive with swearing. </p>
