--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
 	<center>Welcome the offical site!</center>
-	<center><h3>Updates are at the veryy botton</h3></center>
-	<h4>Update 2.</h4>
+	<center><h3>Updates are at the very botton</h3></center>
+	<br>
+	<p>v2.</p>
 	<h3>Here are the server rules.</h3>
 	<br>
 	<p>* Don't be obbsesive with swearing. </p>
