--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<center>Welcome the offical site!</center>
-	<center><h3>Updates are at the very botton</h3></center>
+	<center><h3>Updates are at the very bottom! there you can find the links to our repositories</h3></center>
 	<br>
 	<p>v2.</p>
 	<h3>Here are the server rules.</h3>
@@ -32,6 +32,9 @@
 	<p>* No bypassing the rules.</p>
 	<p>* Pinning messages is Ok, just don't be obbsesive</p>
 	<p>* It doesn't matter how much you moderate just don't ignore the huge stuff.</p>
+	
+	<h1> UPDATES </h1>
+	<p>There are currently no updates! </p>
 
 
 
