--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <html>
 <head>
 	<title>ProgrammingPlace</title>	
-	<script>alert("welcome to the official website for the programmingplace")</script>
-	<script>alert("Be sure to read the rules.") </script>
+	<script>alert("welcome to the official website for the ProgrammingPlace.")</script>
 </head>
 <body>
 
 	<center>Welcome the offical site!</center>
-	<center><h3>Updates are at the very bottom! there you can find the links to our repositories</h3></center>
+	<center><h3>This site is under development.</h3></center>
 	<br>
 	<p>v2.</p>
 	<h3>Here are the server rules.</h3>
