--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<p>* It doesn't matter how much you moderate just don't ignore the huge stuff.</p>
 	
 	<h1> UPDATES </h1>
-	<p>There are currently no updates! </p>
+	<p>Our Discord server: https://discord.gg/GKUucqUkvj</p>
 
 
 
