--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<p>* It doesn't matter how much you moderate just don't ignore the huge stuff.</p>
 	
 	<h1> UPDATES </h1>
-	<h4>Our Discord server.</h4> <a href"https://discord.gg/GKUucqUkvj"> tell your friends!
+	<h4>Our Discord server.</h4> <a href="https://discord.gg/GKUucqUkvj"> tell your friends!</a>
 
 
 
