--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 	<center>Welcome the offical site!</center>
 	<center><h3>This site is under development.</h3></center>
-	<br>
 	<p>v2.</p>
+	<br>
+	<h2><a href="https://discord.gg/GKUucqUkvj"> Join our server!</a>
 	<h3>Here are the server rules.</h3>
 	<br>
 	<p>* Don't be obbsesive with swearing. </p>
@@ -33,7 +34,7 @@
 	<p>* It doesn't matter how much you moderate just don't ignore the huge stuff.</p>
 	
 	<h1> UPDATES </h1>
-	<h4>Our Discord server.</h4> <a href="https://discord.gg/GKUucqUkvj"> tell your friends!</a>
+	<h4>There are no updates at the moment.</h4>
 
 
 
